--- a/mixx/index.html
+++ b/mixx/index.html
@@ -111,8 +111,8 @@
       <table id="phone">
     <tr>
        <td class="lg">
-    <h1 class="tagline2">Small Screen Life Style</h1>
-    <p class="tagline2"><br /><span>More entertaining than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
+    <h1 class="tagline2">Small Screen Lifestyle</h1>
+    <p class="tagline2"><br />A beautiful new way to keep in touch with your favorite music. Our music service isn't only offered in-flight. But also in your everyday life. It's intended for on-the-go entertainment to keep our users relaxed. 24.7MIXX adapts to your listening habits and gives you music recommendations like a bartender would.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
   </td>
       <td class="lg"> <img class="showcase"src="assets/img/phoneplay.png" /></td>
      
@@ -123,8 +123,8 @@
  </tr>
 
   <tr ><td class="sm">
- <h1 class="tagline2">Small Screen Life Style</h1>
-    <p class="tagline2"><br /><span>More amusing than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
+ <h1 class="tagline2">Small Screen Lifestyle</h1>
+    <p class="tagline2"><br />A beautiful new way to keep in touch with your favorite music. Our music service isn't only offered in-flight. But also in your everyday life. It's intended for on-the-go entertainment to keep our users relaxed. 24.7MIXX adapts to your listening habits and gives you music recommendations like a bartender would.<br><a href="http://zxue.me/24-7mixx/design.html">More Info</a></p>
   </td>
  </tr>
 
@@ -133,7 +133,7 @@
    <img class="showcase"src="assets/img/brand.png" />
    
     <h1 class="tagline3">24.7 MIXX BRANDING</h1>
-    <p class="tagline3"><br /><span>More amusing than ever,</span> Virgin America is the airline people enjoy flying with. People love the reinvented entertainment experience that Virgin offers. Now, 24.7Mixx offers seamless music service by bringing your playlist on to the in-flight screens and magnify users' travel experience with local culture in the music.<br><br><a href="http://zxue.me/24-7mixx/assets/brand/logotemp.pdf">More Info</a></p>
+    <p class="tagline3"><br />People love Virgin America because Virgin has their own special style of branding and overall charismatic service. 24.7MIXX incorporates Virgin America's signature colors and friendly personality to appeal to everybody. 24.7MIXX is designed to impress; we want our users to feel at home with our service, tell their friends, and use it time and time again.<br><br><a href="http://zxue.me/24-7mixx/assets/brand/logotemp.pdf">More Info</a></p>
 
     <img class="showcasemap"src="assets/img/map.png" />
 
