--- a/mixx/index.html
+++ b/mixx/index.html
@@ -65,13 +65,13 @@
   <div id="content">
 
  <h1 class="protitle"><span>24.7</span> MIXX</h1>
-  <h4 class="prosubtitle">An online music service that focuses on Virgin America on air experience.</h4>
+  <h4 class="prosubtitle">An online music service that focuses on Virgin America's inflight experience.</h4>
   <h6 class="procredit">Project Advisor: <a href="http://www.aynne.info" style="font-weight:500; text-decoration:underline">Aynne Valencia</a></h6>
 
   <a href="http://zxue.me/24-7mixx"><img class="headpic"src="assets/img/logo.svg" />
   <h1 class="tagline">You don’t have to download music to kill time anymore.</h1></a>
 
-  <h3 id="elevatorpitch">For Virgin Airlines flyers who currently subscribe to other streaming music services, 24.7MIXX is an is a new internet channel that allows subscribers to play music anywhere. Unlike most other music streaming service, 24.7MIXX plays music for you even on the aircraft.</h3>
+  <h3 id="elevatorpitch">For Virgin Airlines flyers who currently subscribe to other streaming music services, 24.7MIXX is a new internet channel that allows subscribers to play music anywhere. Unlike most other music streaming services, 24.7MIXX cpntinuously streams music even in the aircraft.</h3>
 
   <h4 class="quotation">“There’s little things that happen every day. What can you as interaction designers do with things that happen every day, how can you make these little boring things exciting.” <br/>-Aynne Valencia (Instructor)</h4>
 
