--- a/companionship/index.html
+++ b/companionship/index.html
@@ -26,11 +26,11 @@
 
 
 <div id="nav">
-      <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
+      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
       <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
-
+  
 <div id="content">
 
   <h1 class="protitle">Companionship</h1>
