--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <div id="nav">
-      <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
+      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
       <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
