--- a/mixx/index.html
+++ b/mixx/index.html
@@ -55,9 +55,9 @@
   <body>
 
 <div id="nav">
-      <a href="http://zxue.me"><div class="title">ZHIYU XUE</div></a>
-      <a href="http://resume.zxue.me"><div class="manu about">ABOUT</div></a>
-      <a href="../index.html"><div class="manu works">WORK</div></a>
+      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
+      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
 
   <img class="splashscreen"src="assets/img/splashscreen1.svg" />
