--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 <div id="content">
 
-  <table class="item">
+  <a href="companionship/index.html"><table class="item">
   <tr> <td class="briefsm"><h3>Companionship</h3><h6>Interactive Story Book</h6><p><span>Project Brief:</span><br />Make an interactive story book that encourage people to share a scarce resource.<br />Instructor:Christine Wodkte
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a></td></tr>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
   <tr>
     <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p><span>Project Brief:</span><br />Make an interactive story book that encourage people to share a scarce resource.<br />Instructor:Christine Wodkte
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//works.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//works.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//works.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
  <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
 
@@ -38,12 +38,12 @@
 </tr>
 
 <tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table>
+</table></a>
 
 
 <div class="cutline"></div>
 
-<table class="item">
+<a href="mixx/index.html"><table class="item">
   <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
@@ -58,12 +58,30 @@
 
 <tr><td class="detailsm"><h4>Fall, 2015</h4><br> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
+</a>
 
-<!-- <div class="cutline"></div>
+<div class="cutline"></div>
 
-<h1 class="continue">To Be Continued...</h1> -->
+<a href="http://zxue.me/interactive2/project3/index.html">
+<table class="item">
+  <tr> <td class="briefsm"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/interactive2/project3/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/interactive2/project3/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/interactive2/project3/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
+
+  <tr>
+    <td class="brief"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/interactive2/project3/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/interactive2/project3/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/interactive2/project3/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+
+    <td><a href="http://zxue.me/interactive2/project3/index.html"><div><embed class="unown thumbnail" src="http://zxue.me/interactive2/project3/embed.html" /></div></a></td>
+
+    <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+</tr>
+
+<tr><td class="detailsm"><h4>Fall, 2015</h4><br> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+</table>
+</a>
 
 
+<!-- <h1 class="continue">To Be Continued...</h1> -->
 </div>
 
 
