--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Fall, 2015</h4><br> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 </a>
 
@@ -96,7 +96,7 @@
     <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Fall, 2015</h4><br> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table>
 </a>
 
