--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div id="content">
 
-<a href="mixx/index.html"><table class="item" id="project1">
+<a href="mixx/index.html"><table class="item" id="mixx">
   <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
@@ -83,7 +83,7 @@
 <div class="cutline"></div>
 
 <a href="http://zxue.me/interactive2/project3/index.html">
-<table class="item">
+<table class="item" id="unownsans">
   <tr> <td class="briefsm"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/interactive2/project3/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/interactive2/project3/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/interactive2/project3/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
