--- a/index.html
+++ b/index.html
@@ -82,6 +82,24 @@
 
 <div class="cutline"></div>
 
+<a href="http://www.brodielegnon.com/#/monster-pho/"><table class="item">
+  <tr> <td class="briefsm"><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate (Brodie) and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
+
+  <tr>
+    <td class="brief" ><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate <a href="http://www.brodielegnon.com">(Brodie)</a> and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
+</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+
+ <td>   <a href="http://www.brodielegnon.com/#/monster-pho/"><img class="thumbnail" src="assets/img/monsterpho.png" /></a></td>
+
+    <td class="detail" ><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Based on our research we found many opportunities that could improve the dining experience for customers in monster pho. <br>Touch Point: Research Report</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+</tr>
+
+<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Based on our research we found many opportunities that could improve the dining experience for customers in monster pho. <br>Touch Point: Research Report</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+</table></a>
+
+<div class="cutline"></div>
+
 <a href="http://zxue.me/interactive2/project3/index.html">
 <table class="item" id="unownsans">
   <tr> <td class="briefsm"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
@@ -107,7 +125,7 @@
 
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU(REAJI) XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE</span></a></div>
 
   <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
