upload my about page

--- a/yogitea/index.html
+++ b/yogitea/index.html
@@ -27,7 +27,7 @@
 
 <div id="nav">
       <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
   
@@ -115,7 +115,7 @@ Priest had a relationship, but it did not work out. He advises Re to help people
 
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU (REAJI) XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE</span></a></div>
 
   <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
 </div>
