--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="nav">
       <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
 
@@ -53,10 +53,10 @@
 
  <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
 
-    <td class="detail"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful and people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful that people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful and people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table></a>
 
 
@@ -65,19 +65,19 @@
 
 
 <a href="yogitea/index.html"><table class="item">
-  <tr> <td class="briefsm"><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea using the tea bag inspirations.<br />Instructor:Catherine Herdlick
+  <tr> <td class="briefsm"><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea by using the tea bag inspirations.<br />Instructor:Catherine Herdlick
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
   <tr>
-    <td class="brief" ><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea using the tea bag inspirations.<br />Instructor:Catherine Herdlick
+    <td class="brief" ><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea by using the tea bag inspirations.<br />Instructor:Catherine Herdlick
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
  <td>   <a href="yogitea/index.html"><img class="thumbnail" src="assets/img/yogitea.png" /></a></td>
 
-    <td class="detail" ><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by reading text and following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
+    <td class="detail" ><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
 
-<tr><td class="detailsm"><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by reading text and following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
+<tr><td class="detailsm"><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
 </table></a>
 
 <div class="cutline"></div>
