--- a/mixx/index.html
+++ b/mixx/index.html
@@ -56,7 +56,7 @@
 
 <div id="nav">
       <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://resume.zxue.me">ABOUT</a></div>
+      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
       <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
   </div>
 
