monster pho up online

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <div class="cutline"></div>
 
-<a href="http://www.brodielegnon.com/#/monster-pho/"><table class="item">
+<a href="monsterpho/index.html"><table class="item">
   <tr> <td class="briefsm"><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate (Brodie) and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
 
@@ -90,7 +90,7 @@
     <td class="brief" ><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate <a href="http://www.brodielegnon.com">(Brodie)</a> and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
 </p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
 
- <td>   <a href="http://www.brodielegnon.com/#/monster-pho/"><img class="thumbnail" src="assets/img/monsterpho.png" /></a></td>
+ <td>   <a href="monsterpho/index.html"><img class="thumbnail" src="assets/img/monsterpho.png" /></a></td>
 
     <td class="detail" ><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Based on our research we found many opportunities that could improve the dining experience for customers in monster pho. <br>Touch Point: Research Report</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
 </tr>
