--- a/monsterpho/index.html
+++ b/monsterpho/index.html
@@ -37,7 +37,7 @@
   <h4 class="prosubtitle">Design research project to understand a business.</h4>
   <h6 class="procredit">Project Advisor: <a href="http://www.cooper.com/people/lauren_ruiz" style="font-weight:500; text-decoration:underline">Lauren Ruiz</a> and <a href="http://amybickerton.org" style="font-weight:500; text-decoration:underline">Amy Bickerton</a></h6>
 
-  <img class="headpic"src="assets/img/journeymap.jpg" />
+  <img class="headpic"src="assets/img/journeymap.svg" />
 
 <h3 id="elevatorpitch">For Vietnamese restaurant market, Monster Pho is a neat, clean, and  delicious restaurant that people love to spend their lunch and dinner. Brodie and I were team up to find out what is good about it.</h3>
 
@@ -92,8 +92,8 @@
 <img class="showcase"src="assets/img/spectrum.jpeg" />
 
 <h2 class="protitle1">Personas</h2>
-<img class="showcase"src="assets/img/persona1.jpeg" />
-<img class="showcase"src="assets/img/persona2.jpeg" />
+<img class="showcase"src="assets/img/personas1.jpeg" />
+<img class="showcase"src="assets/img/personas2.jpeg" />
 
 <h2 class="protitle1">Mapout Journeymap</h2>
 <img class="showcase"src="assets/img/mapout.jpeg" />
