--- a/yogitea/index.html
+++ b/yogitea/index.html
@@ -47,7 +47,7 @@
 <img class="showcase"src="assets/img/yogi.png" />
 
 <div class="vedio">
-<iframe src="https://player.vimeo.com/video/156432211?color=ff9933&title=0&byline=0&portrait=0" width="1000" height="562" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/156432211?title=0&byline=0&portrait=0' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 </div>
   <!-- <img class="itis" src="assets/img/sifteo.png" /> -->
   <h3 class="readmore"><a>Read More</a></h3>
