update new test of the work

--- a/test.html
+++ b/test.html
@@ -37,13 +37,13 @@
 <div id="companionship">
   <div id="companionshipinfo"><h1>Companionship</h1><h2>A story book helps you get rid of sarrow of breaking up.</h2>
     <h3><a href="companionship/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
-  <img id="companionshipimg" src="assets/img/companionship2.1.png" />
+  <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
 
 <div id="wetea">
   <div id="weteainfo"><h1>weTea Game</h1><h2>What if fun tea bags can help you get along with your friends?</h2>
-    <h3><a href="companionship/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
-  <img id="weteaimg" src="assets/img/yogitea.png" />
+    <h3><a href="yogitea/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
   </div>
 
 
