--- a/test.html
+++ b/test.html
@@ -28,26 +28,27 @@
 
 
 <div id="mixx24">
-  <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>Your personal music that brought to airline service.</h2>
+  <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens; your music, anywhere.</h2>
     <h3><a href="mixx/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="mixximg" src="assets/img/mixx2.1.png" />
   </div>
 
 
 <div id="companionship">
-  <div id="companionshipinfo"><h1>Companionship</h1><h2>A story book helps you get rid of sarrow of breaking up.</h2>
+  <div id="companionshipinfo"><h1>Companionship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
     <h3><a href="companionship/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
 
 <div id="wetea">
-  <div id="weteainfo"><h1>weTea Game</h1><h2>What if fun tea bags can help you get along with your friends?</h2>
+  <div id="weteainfo"><h1>weTea Game</h1><h2>What if tea bags could help break the ice of a conversation?
+</h2>
     <h3><a href="yogitea/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
   </div>
 
 <div id="monsterpho">
-  <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Research on an innovative pho restaurant where is painstakingly designed.</h2>
+  <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Performing deep, honest research to discover how a pho restaurant can be innovative.</h2>
     <h3><a href="monsterpho/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" />
   </div>
