--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Work - Zhiyu Xue</title>
     <meta name="author" content="Zhiyu(Reaji) Xue" />
-    <link rel="stylesheet" href="css/main.css">
+
+    <link rel="stylesheet" href="css/mybutt.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/nav.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="shortcut icon" href="assets/icons/webtag.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/icons/webtag.svg">
@@ -22,107 +25,39 @@
   </div>
 
 
-<div id="content">
-
-<a href="mixx/index.html"><table class="item" id="mixx">
-  <tr> <td class="briefsm"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
-
-  <tr>
-    <td class="brief"><h3>24-7 Mixx</h3><h6>Visual UI Design Project</h6><p><span>Project Brief:</span><p>24-7Mixx is a music service design based on Virgin Mobile's branding design. Looked for branding elements and use them to develop a new product with new functions.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/24-7mixx">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/24-7mixx">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/24-7mixx&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
-
-    <td><a href="mixx/index.html"><img class="thumbnail" src="assets/img/mixx2.png" /></td>
-
-    <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>By focusing on what users need in flight such as users want to know where they are, a new music service system is designed to increase users' experience on air and mobile.<br>Touch Point:Mobile, Air Plane</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table>
-</a>
-
-<div class="cutline"></div>
-
-  <a href="companionship/index.html"><table class="item">
-  <tr> <td class="briefsm"><h3>Companionship</h3><h6>Interactive Story Book</h6><p><span>Project Brief:</span><br />Make an interactive story book that encourage people to share a scarce resource.<br />Instructor:Christine Wodkte
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
-
-  <tr>
-    <td class="brief"><h3>Companionship</h3><h6>Interactive Story Book</h6><p><span>Project Brief:</span><br />Make an interactive story book that encourage people to share a scarce resource.<br />Instructor:Christine Wodkte
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/companionship/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/companionship/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/companionship/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
-
- <td>   <a href="companionship/index.html"><img class="thumbnail" src="assets/img/companionship.png" /></a></td>
-
-    <td class="detail"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful and people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Companionship game. Companionship is a scarce resource in today's world because city life is stressful and people forget about caring for others.<br>Touch Point: Sifteo Cubes</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table></a>
 
 
-<div class="cutline"></div>
+<div id="mixx24">
+  <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens; your music, anywhere.</h2>
+    <h3><a href="mixx/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="mixximg" src="assets/img/mixx2.1.png" />
+  </div>
 
 
+<div id="companionship">
+  <div id="companionshipinfo"><h1>Companionship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
+    <h3><a href="companionship/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
+  </div>
 
-<a href="yogitea/index.html"><table class="item">
-  <tr> <td class="briefsm"><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea by using the tea bag inspirations.<br />Instructor:Catherine Herdlick
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
+<div id="wetea">
+  <div id="weteainfo"><h1>weTea Game</h1><h2>What if tea bags could help break the ice of a conversation?
+</h2>
+    <h3><a href="yogitea/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
+  </div>
 
-  <tr>
-    <td class="brief" ><h3>weTea</h3><h6>Fellowship Game</h6><p><span>Project Brief:</span><br />Create a sense of fellowship in households and workplaces that stock Yogi Tea by using the tea bag inspirations.<br />Instructor:Catherine Herdlick
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
+<div id="monsterpho">
+  <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Performing deep, honest research to discover how a pho restaurant can be innovative.</h2>
+    <h3><a href="monsterpho/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" />
+  </div>
 
- <td>   <a href="yogitea/index.html"><img class="thumbnail" src="assets/img/yogitea.png" /></a></td>
-
-    <td class="detail" ><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Feb, 2016</h4> <p><br/><span>Solution:</span> <br />Provide players with fellowship through encouraging players to respond to each other by following instructions. <br>Touch Point: Tea Bag</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table></a>
-
-<div class="cutline"></div>
-
-<a href="monsterpho/index.html"><table class="item">
-  <tr> <td class="briefsm"><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate (Brodie) and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
-
-  <tr>
-    <td class="brief" ><h3>Monster Pho</h3><h6>Design Research</h6><p><span>Project Brief:</span><br />For this project, my teammate <a href="http://www.brodielegnon.com">(Brodie)</a> and I were tasked with understanding a particular type of restaurant and to find out how this type of restaurant works.<br />Instructors:Amy Bickerton, Lauren Ruiz
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//work.zxue.me/yogitea/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//work.zxue.me/yogitea/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//work.zxue.me/yogitea/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
-
- <td>   <a href="monsterpho/index.html"><img class="thumbnail" src="assets/img/monsterpho.png" /></a></td>
-
-    <td class="detail" ><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Based on our research we found many opportunities that could improve the dining experience for customers in monster pho. <br>Touch Point: Research Report</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Feb, 2015</h4> <p><br/><span>Solution:</span> <br />Based on our research we found many opportunities that could improve the dining experience for customers in monster pho. <br>Touch Point: Research Report</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table></a>
-
-<div class="cutline"></div>
-
-<a href="http://zxue.me/interactive2/project3/index.html">
-<table class="item" id="unownsans">
-  <tr> <td class="briefsm"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/interactive2/project3/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/interactive2/project3/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/interactive2/project3/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td></tr>
-
-  <tr>
-    <td class="brief"><h3>UNOWN SANS</h3><h6>Front End Engineer Project</h6><p><span>Project Brief:</span><p>Create a typeface using only HTML and CSS. It should have a complete character set.
-</p><h4 class="sharelink"><br /><a class="projectsharet"href="https://twitter.com/home?status=http%3A//zxue.me/interactive2/project3/index.html">&nbsp<img class="comp" src="assets/icons/twitter.svg" />&nbsp</a><a class="projectsharef"href="https://www.facebook.com/sharer/sharer.php?u=http%3A//zxue.me/interactive2/project3/index.html">&nbsp&nbsp<img class="comp" src="assets/icons/facebook.svg" />&nbsp&nbsp</a><a class="projectsharein"href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//zxue.me/interactive2/project3/index.html&title=&summary=&source=">&nbsp<img class="comp" src="assets/icons/linkedin.svg" />&nbsp</a><br /><br /></h4></td>
-
-    <td><a href="http://zxue.me/interactive2/project3/index.html"><div><embed class="unown thumbnail" src="http://zxue.me/interactive2/project3/embed.html" /></div></a></td>
-
-    <td class="detail"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p>  <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td>
-</tr>
-
-<tr><td class="detailsm"><h4>Fall, 2015</h4> <p><br /><span>Solution:</span><br>It is a font that is recreated from Unown, a series of mystery Pokemon that represents archaeology and unknown worlds. The font is itself is done by CSS.<br>Touch Point:Web</p><!-- <p>Credit:</p> --> <!-- <p>Instructor:</p> --> <a href="mailto:zxue@cca.edu?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><h4 class="deslink"><br />Contact Me<br /><br /></h4></a></td></tr>
-</table>
-</a>
-
-
-<!-- <h1 class="continue">To Be Continued...</h1> -->
-</div>
-
-
+  <div id="unown">
+  <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS = Unown Sans Font</h2>
+    <h3><a href="http://zxue.me/interactive2/project3/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
+  <img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" />
+  </div>
 
 <div id="mybutt">
   <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE</span></a></div>
