subtle visual chang

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 
 
 <div id="mixx24">
-  <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
+  <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens; your music, anywhere.</h2>
     <h3><a href="mixx/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="mixximg" src="assets/img/mixx2.1.png" />
   </div>
@@ -54,7 +54,7 @@
   </div>
 
   <div id="unown">
-  <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS = Unown Sans Font</h2>
+  <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS + Pokemon = Unown Sans Font</h2>
     <h3><a href="http://zxue.me/interactive2/project3/index.html">Learn More</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact</a> ></h3></div>
   <img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" />
   </div>
